# -Intelligent-Insurance-Fraud-Detection-System

./: README.md
insurance-fraud-detection-graph-backend/: .example.env  .gitignore  Dockerfile  FRAUD_DETECTION_GUIDE.md  README.md  load_csv_to_neo4j.py  neo4j_loader_standalone.py  pyproject.toml  requirements.txt  test_adaptive_pipeline.sh  test_fraud_endpoints.sh  test_neo4j_direct.py  test_snowflake_connection.py
insurance-fraud-detection-graph-backend/Data_Prep_Code/: data_add_up.py  generate_claim_pdfs_v1.py  generate_claim_pdfs_v2.py  pyproject.toml  sample_test_data.csv  sample_test_data_labels.csv
insurance-fraud-detection-graph-backend/Data_Prep_Code/Claim_Documents_Test/: LLM with Knowledge Graph DB.postman_collection.json
insurance-fraud-detection-graph-backend/Data_Prep_Code/Data/: insurance_data_enriched.csv
insurance-fraud-detection-graph-backend/app/: config.py  logging_conf.py  main.py  middleware.py
insurance-fraud-detection-graph-backend/app/claim_types/: registry.py
insurance-fraud-detection-graph-backend/app/classifiers/: doc_type.py
insurance-fraud-detection-graph-backend/app/db/: neo4j_driver.py  neo4j_utils.py  snowflake_utils.py
insurance-fraud-detection-graph-backend/app/extractors/: extractor.py
insurance-fraud-detection-graph-backend/app/llm/: client.py  pricing.py  usage.py
insurance-fraud-detection-graph-backend/app/models/: fraud.py
insurance-fraud-detection-graph-backend/app/pipelines/: csv_pipeline.py
insurance-fraud-detection-graph-backend/app/routes/: dashboard.py  evaluation.py  extract.py  fraud.py  graph_chat.py  (+3 more)
(+27 files in other folders)
